hero-area-changed

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 	<div class="hero-area hero-bg">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-9 offset-lg-2 text-center">
+				<div class="col-lg-9  text-left">
 					<div class="hero-text">
 						<div class="hero-text-tablecell">
 							<p class="subtitle">Fresh & Organic</p>
-							<h1>Delicious Seasonal Fruits</h1>
+							<h1>Personal <br/> Nutritionist</h1>
 							<div class="hero-btns">
 								<a href="shop.html" class="boxed-btn">Fruit Collection</a>
-								<a href="contact.html" class="bordered-btn">Contact Us</a>
+								<a href="contact.html" class="bordered-btn button-text-blk">Contact Us</a>
 							</div>
 						</div>
 					</div>
