--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<!-- title -->
 	<title>MyNutro</title>
+	<link rel="icon" href="assets\img\title_icon.ico" type="image/icon type"/>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
